tests/sksl/errors/InvalidUnsizedArray.metal
### Compilation failed:

error: 1: unsized arrays are not permitted here
in int[] a;
^^^^^^^^^^
error: 1: pipeline inputs not permitted in compute shaders
in int[] a;
^^^^^^^^^^
error: 1: 'in' variables may not have unsized array type
in int[] a;
^^^^^^^^^^
error: 4: unsized array must be the last member of a storage block
    int[] b;
    ^^^^^^^^
error: 8: unsized array must be the last member of a storage block
    int[] c;
    ^^^^^^^^
error: 13: unsized array must be the last member of a storage block
    int[] e;
    ^^^^^^^^
error: 18: unsized arrays are not permitted here
    int[] g;
    ^^^^^^^
error: 18: unsized arrays are not permitted here
    int[] g;
    ^^^^^^^^
8 errors
